--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
-.navbar{ background: #00f9ec;}
-.nav-link, .navbar-brand{  color: #ff0606; cursor: pointer;}
+.navbar{ background: #2e00f9;}
+.nav-link, .navbar-brand{  color: #ffffff; cursor: pointer;}
 .nav-link{ margin-right: 1em !important;}
 .nav-link:hover {color: #f900cb;}
 .navbar-collapse{ justify-content: flex-end; }
@@ -30,16 +30,118 @@
     
 }
 .description h1{
- color:#2e00f9 ;
+    color:#2e00f9 ;
 }
 .description p{
- color:#666;
- font-size: 20px;
- width: 50%;
- line-height: 1.5;
+    color:#666;
+    font-size: 20px;
+    width: 50%;
+    line-height: 1.5;
 }
 .description button{
- border:1px  solid #F97300;
- background:#F97300;
- color:#fff;
+    border:1px  solid #2e00f9;
+    background:#2e00f9;
+    color:#fff;
+}
+
+
+.about{
+    margin: 4em 0;
+    padding: 1em;
+    position: relative;
+}
+.about h1{
+    color:#2e00f9;
+    margin: 2em;
+}
+.about img{
+    height: 100%;
+    width: 100%;
+    border-radius: 50%
+}
+.about span{
+    display: block;
+    color: #888;
+    position: absolute;
+    left: 95px;
+}
+.about .desc{
+    padding: 2em;
+    border-left:4px solid #10828C;
+}
+.about .desc h3{
+    color: #10828C;
+}
+.about .desc p{
+    line-height:2;
+    color:#888;
+}
+
+.projects{
+    margin: 4em 0;
+    position: relative; 
+}
+.projects h1{
+    color:#2e00f9;
+    margin: 2em; 
+}
+.projects img{
+    height: 15rem;
+    width: 100%;
+    margin: 1em;   
+}
+.experiences{
+    margin: 4em 0;
+    position: relative; 
+ }
+.experiences h1{
+    color:#2e00f9;
+    margin: 2em; 
+}
+.experiences .card{
+    box-shadow: 0 0 20px #ccc;
+}
+.experiences .card img{
+    width: 100%;
+    height: 12em;
+}
+.experiences .card-title{
+    color:#F97300;
+     
+}
+.experiences .card-title1{
+    color: #f900cb;
+}
+.experiences .card-title2{
+    color: #f90000;
+}
+.experiences .card-body{
+    padding: 1em;
+}
+.side-interests{
+    margin: 4em 0;
+    position: relative;  
+}
+.side-interests h1{
+    color:#2e00f9;
+    margin: 2em; 
+}
+.side-interests .item{
+    position: relative;
+ }
+.side-interests .des{
+    background: #2e00f9;
+    color: #fff;
+    text-align: center;
+    border-bottom-left-radius: 93%;
+    transition:.3s ease-in-out;  
+}
+.side-interests .item:hover .des{
+    height: 100%;
+    background:#f973007d;
+    position: absolute;
+    width: 89%;
+    padding: 5em;
+    top: 0;
+    border-bottom-left-radius: 0;
 }
