--- a/css/nobe.css
+++ b/css/nobe.css
@@ -1,18 +1,18 @@
 .header{
-    background-image: url('../images/ecommerce.jpg');
+    background-image: url('../images/nobebackground.png');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
 }
 
-.overlay{
-    position: relative;
-    min-height: 100%;
-    min-width: 100%;
-    left: 0;
-    top: 0;
-    background: rgba(244, 244, 244, 0.384);
-}
+@keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:1;
+    }
+  }
 
 .description{
     position: relative;
@@ -22,13 +22,15 @@
 }
 .description h1{
     color:orange ;
+    animation: fadeIn 5s;
+
 }
 .des{
-    color:#666;
+    color:rgb(0, 0, 0);
     position: relative;
     font-size: 20px;
     text-align: center;
-
+    animation: fadeIn 7s;
     line-height: 2.5;
 }
 
