--- a/css/tinder.css
+++ b/css/tinder.css
@@ -1,18 +1,18 @@
 .header{
-    background-image: url('../images/tinder.png');
+    background-image: url('../images/tinderbackground.jpg');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
 }
 
-.overlay{
-    position: relative;
-    min-height: 100%;
-    min-width: 100%;
-    left: 0;
-    top: 0;
-    background: rgba(244, 244, 244, 0.64);
-}
+@keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:1;
+    }
+  }
 
 .description{
     position: relative;
@@ -22,20 +22,15 @@
 }
 .description h1{
     color:#f9007c ;
+    animation: fadeIn 5s;
+
 }
 .des{
     color:rgb(0, 0, 0);
     position: relative;
     font-size: 20px;
     text-align: center;
+    animation: fadeIn 7s;
 
     line-height: 2.5;
-}
-
-.header .but{
-	border:1px  solid #f9006c;
-	background:#f9006c;
-	color:#fff;
-    top: 0;
-    right: 0;
 }
