--- a/css/nobe.css
+++ b/css/nobe.css
@@ -14,6 +14,17 @@
     }
   }
 
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+
+@keyframes blink {
+    from { border-color: transparent }
+    to { border-color: #2e00f9; }
+}
+
+
 .description{
     position: relative;
     text-align: center;
@@ -22,7 +33,14 @@
 }
 .description h1{
     color:orange ;
-    animation: fadeIn 5s;
+    overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap;
+    margin: auto;
+    animation: 
+        typing 4.5s steps(31) forwards,
+        blink .8s infinite;
+    max-width: fit-content;
 
 }
 .des{
@@ -30,7 +48,7 @@
     position: relative;
     font-size: 20px;
     text-align: center;
-    animation: fadeIn 7s;
+    animation: fadeIn 4s;
     line-height: 2.5;
 }
 
