--- a/css/ti.css
+++ b/css/ti.css
@@ -15,6 +15,16 @@
     }
   }
 
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+
+@keyframes blink {
+    from { border-color: transparent }
+    to { border-color: #2e00f9; }
+}
+
 .description{
     position: relative;
     text-align: center;
@@ -23,7 +33,15 @@
 }
 .head{
     color:#f90000 ;
-    animation: fadeIn 1.5s;
+    overflow: hidden;
+    border-right: .15em solid #f90000;
+    white-space: nowrap;
+    margin: auto;
+    animation: 
+        typing 4.5s steps(31) forwards,
+        blink .8s infinite;
+    max-width: fit-content;
+
 }
 .des{
     color:rgb(0, 0, 0);
