--- a/css/tinder.css
+++ b/css/tinder.css
@@ -14,6 +14,16 @@
     }
   }
 
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+
+@keyframes blink {
+    from { border-color: transparent }
+    to { border-color: #2e00f9; }
+}
+
 .description{
     position: relative;
     text-align: center;
@@ -22,7 +32,14 @@
 }
 .description h1{
     color:#f9007c ;
-    animation: fadeIn 5s;
+    overflow: hidden;
+    border-right: .15em solid #f9007c;
+    white-space: nowrap;
+    margin: auto;
+    animation: 
+        typing 4.5s steps(31) forwards,
+        blink .8s infinite;
+    max-width: fit-content;
 
 }
 .des{
