--- a/css/main.css
+++ b/css/main.css
@@ -183,7 +183,7 @@ body{
 }
 .projects img{
     height: 15rem;
-    width: 100%;
+    width: 30rem;
     margin: 1em;   
 }
 
@@ -215,7 +215,7 @@ body{
     visibility: hidden;
     color: rgb(255, 255, 255);
     text-align: center;
-    font-size: small;
+    font-size: x-small;
 }
 .zoom .info{
     position: absolute;
@@ -330,7 +330,7 @@ body{
     visibility: hidden;
     color: rgb(255, 255, 255);
     text-align: center;
-    font-size: small;
+    font-size: x-small;
 }
 
 .zoom1:hover img{
